--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,54 +1,69 @@
 name: BuildAndTest
 on: [pull_request, workflow_dispatch]
+
+env:
+  CHIFRA_PATH: src/apps/chifra
+  GO_VERSION: ^1.20
+
 jobs:
   golangci:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      -
+        uses: actions/checkout@v3
+      -
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-      - uses: actions/checkout@v3
-      - name: golangci-lint
+          go-version: ${{ env.GO_VERSION }}
+          cache: false
+          cache-dependency-path: ${{ env.CHIFRA_PATH }}/go.sum
+      -
+        name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: v1.29
+          version: latest
 
           # Optional: working directory, useful for monorepos
-          working-directory: src/apps/chifra
+          working-directory: ${{ env.CHIFRA_PATH }}
   Build:
     needs: golangci
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout TrueBlocks repo
+      -
+        name: Checkout TrueBlocks repo
         uses: actions/checkout@v2
-      - name: Use a certain version of go
-        uses: actions/setup-go@v2
+      -
+        name: Use a certain version of go
+        uses: actions/setup-go@v4
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          go-version: "^1.20"
-      - name: Install prerequistes
+          go-version: ${{ env.GO_VERSION }}
+      -
+        name: Install prerequistes
         run: |
           sudo apt-get update
           sudo apt-get upgrade
           sudo apt-get install build-essential git cmake
           sudo apt-get install python3 tree jq
           sudo apt-get install libcurl3-dev clang-format
-      - name: Run basic golang unit tests
+      -
+        name: Run basic golang unit tests
         run: |
           mkdir -p build
           cd build
           cmake ../src
           cd other/install
           make
-          cd ../../../src/apps/chifra
+          cd -
+          cd ${{ env.CHIFRA_PATH }}
           go test ./...
   RemoteTests:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Run tests remotely
+      -
+        name: Run tests remotely
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.TESTING_HOST }}
