--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -26720,6 +26720,237 @@
       "bloomSize": 917570,
       "indexHash": "Qmc9kjVzuzwfm1BuATD5bZtbMGhtT35MGwbTaRVF9btgX3",
       "indexSize": 25801476
+    },
+    {
+      "range": "017742869-017775871",
+      "bloomHash": "QmYcw7W3wt15hoV7DLNee4imJsSFVbssTLqbHT3hScvCgY",
+      "bloomSize": 917570,
+      "indexHash": "QmTtxiLaMscsmxzqRzZMa3J3eYw29Sj3RypNLGmNSpmm3Y",
+      "indexSize": 25583152
+    },
+    {
+      "range": "017775872-017778998",
+      "bloomHash": "QmXeWznh9NMT2MotChrw7oLBx2Ze5WczfrDYDAn4JzuwhH",
+      "bloomSize": 917570,
+      "indexHash": "QmQDPScroUmnfde2WcmymYwpQLuzz531h6fHLnFP9vy6HA",
+      "indexSize": 25548956
+    },
+    {
+      "range": "017778999-017782259",
+      "bloomHash": "QmVKzbie2npkeU9SdwgxUq5jWgkRhJwbjDjeH12a2aJPjb",
+      "bloomSize": 917570,
+      "indexHash": "QmNz5TauthQ4JkTbFPiG6nx1Vx3rmVRroxZg5ipNMaK8SJ",
+      "indexSize": 24706236
+    },
+    {
+      "range": "017782260-017785444",
+      "bloomHash": "QmQvbTNay5JRTG3wqYBFR635AcsGgq89VJg8jgUiLf3C4q",
+      "bloomSize": 917570,
+      "indexHash": "QmRrNhzDUY79DcFfzitVMfQte3c4geysCbH53QLFsGAwk7",
+      "indexSize": 25576020
+    },
+    {
+      "range": "017785445-017788691",
+      "bloomHash": "QmWYGrwzw7cwouFsTMXD8ZRFxzb81HdUYRGidnq29VDriK",
+      "bloomSize": 786494,
+      "indexHash": "Qmb6aG5p6Bts37bGzuoVGqjbKKutAnmSzT2vCS5LgjAqFV",
+      "indexSize": 24380696
+    },
+    {
+      "range": "017788692-017791849",
+      "bloomHash": "QmceSu26rgPytMyfUGnHtqhMVezBesecycvVa1XCjwTrWg",
+      "bloomSize": 917570,
+      "indexHash": "QmR5bpnpQVVpUJeGD9dTyCV31RAMoKidskBaPbchH4PYZZ",
+      "indexSize": 25627196
+    },
+    {
+      "range": "017791850-017795040",
+      "bloomHash": "QmeuVkDwQeDEoasHJVoQWoCBCyAjV7iw78prnxbT5xQmKD",
+      "bloomSize": 917570,
+      "indexHash": "QmZ8u5qtKnLtYokCLAnsmaBpHjgRKpd2toY3zSgFGAKN9X",
+      "indexSize": 24810316
+    },
+    {
+      "range": "017795041-017798197",
+      "bloomHash": "QmR9fd17ZrM8vr8JQzVX6dP6fxQsHqN7v1EYatWp12EuYL",
+      "bloomSize": 1179722,
+      "indexHash": "QmPb58NkbEzu1FvFuvjJDUCvXQBVUgteRVNPwDN1ZLQ3hi",
+      "indexSize": 27350952
+    },
+    {
+      "range": "017798198-017800000",
+      "bloomHash": "QmfReEjRX4Gf6i45DTHzyrJxAbkKZfzW9a7KvnXkKSJGTN",
+      "bloomSize": 655418,
+      "indexHash": "QmSy4kA6CGWwYnT3ghyYMd6u3Tr8Qz6zRt2TwRpCx1ddW8",
+      "indexSize": 14968900
+    },
+    {
+      "range": "017800001-017803253",
+      "bloomHash": "QmNqMfKKVSZZKhQsX5gTMBebQPtigcpFvzn2MSWBqGkSBf",
+      "bloomSize": 786494,
+      "indexHash": "QmcCWurU9Ae256JAdohtgnbSZYJPWoA5sQhyTDjb1KwnJg",
+      "indexSize": 24350660
+    },
+    {
+      "range": "017803254-017806410",
+      "bloomHash": "QmT4vmtFNxGsvRkYbPVFD2gvorEgJypQJVQMQP9aAg3weK",
+      "bloomSize": 1048646,
+      "indexHash": "QmcBomCZM2Npm7GGgrti3BEhkxrjq8EbvXLSvucRBz8274",
+      "indexSize": 26180744
+    },
+    {
+      "range": "017806411-017809495",
+      "bloomHash": "QmPKhxjTAixaAzY5ETYBttRdQvqFG9W7BdMBGFq4BkGk8r",
+      "bloomSize": 917570,
+      "indexHash": "QmYnuxjYoqeMHnrYdmDA3w9Wdij7ifsfJvmJqXYMr8W17B",
+      "indexSize": 25364872
+    },
+    {
+      "range": "017809496-017812588",
+      "bloomHash": "QmTbFfam478mwyA5i3CQSreCdJKaq4nUTLkZgG6oRkF7nJ",
+      "bloomSize": 1179722,
+      "indexHash": "QmaTMLa54NJUWywk6VntsQg6Y6o8dfEgrDG1z2Jromg8nx",
+      "indexSize": 27207628
+    },
+    {
+      "range": "017812589-017815536",
+      "bloomHash": "QmeEeDPYkqpHm6T3cCgCcUcarygzAjG997qcg6363Y36Wy",
+      "bloomSize": 917570,
+      "indexHash": "QmWNiykfWmKcGDYvMMrjuhtAzLWdw3eSeSgyDxRrYHTwck",
+      "indexSize": 25671532
+    },
+    {
+      "range": "017815537-017818627",
+      "bloomHash": "QmZbe8ERiLz3SJQXs2qDWdbUMhEGoruEgHmePwd58hGzVM",
+      "bloomSize": 917570,
+      "indexHash": "QmNT9YuCM1WnFaHztxHt8rZ9RkppmqXxKAxhMYJ949imdn",
+      "indexSize": 25049516
+    },
+    {
+      "range": "017818628-017821652",
+      "bloomHash": "QmezysXKJvbdvfa3J3mCf16om4WzmnL3zfuXGGkCo7EDsH",
+      "bloomSize": 1048646,
+      "indexHash": "QmbnBhgvF3irEtSRiG8xXRrKpmpomwBqpV9r2QzjCNeRTV",
+      "indexSize": 25816536
+    },
+    {
+      "range": "017821653-017824766",
+      "bloomHash": "QmPpAmjA7aoQg8UmZ5vagrw2YpEbL8vGhZ9hDeD37s95US",
+      "bloomSize": 917570,
+      "indexHash": "QmRZz8A7ueeVZTUcmmW8i3G6Gh9SHL2jVU1vatmyWSRTJq",
+      "indexSize": 24520824
+    },
+    {
+      "range": "017824767-017827828",
+      "bloomHash": "QmUXCpr6baRq8FNMFcbaXzFdq28RCrDg7ppcW9RALy2B4T",
+      "bloomSize": 1048646,
+      "indexHash": "QmP3x1JE1wKMjYTeb7fP3vPhtR7Q3Umv52EMqKekYhDe2C",
+      "indexSize": 26095864
+    },
+    {
+      "range": "017827829-017830907",
+      "bloomHash": "QmbfwNRaKK7iPss2K2scjVCq23GFYGmMG8emKgfHEynNZ1",
+      "bloomSize": 917570,
+      "indexHash": "QmUaqWPhVFJrArGsUuARKCJRCxjmHVeafxYM1yvF3k7Gz2",
+      "indexSize": 24891072
+    },
+    {
+      "range": "017830908-017833886",
+      "bloomHash": "QmQzZyKmZcs8UhfFYq9yPcMhqsRYQo7c669BRgvEGWnFZB",
+      "bloomSize": 1048646,
+      "indexHash": "QmV9Ni7FMwzNzfhgsdNEA43p2dB3PLjeCEJKDGmTiCtcjp",
+      "indexSize": 26803344
+    },
+    {
+      "range": "017833887-017836995",
+      "bloomHash": "QmeRHcqobVWZ21Vm25tzsws46UAG5nyNS8zUsdTVEYC6EM",
+      "bloomSize": 917570,
+      "indexHash": "QmYd1CNv8mhfmjoU8nKHAMb5JibDjfgJJj5C6WzaPnus6B",
+      "indexSize": 25120260
+    },
+    {
+      "range": "017836996-017839987",
+      "bloomHash": "QmUKJ7yZjrmfDpsnLV8zHNBc7St5DkASv7H7xUyLDoNdzZ",
+      "bloomSize": 1048646,
+      "indexHash": "QmQYiHv1SBv26MTBWaT8KzpjJNA4v15ifHyQ16632bh9fh",
+      "indexSize": 25992960
+    },
+    {
+      "range": "017839988-017843025",
+      "bloomHash": "QmWfyjcKfRoFUdx21SZFKmcxveEfhBidZtXiGrpbxbNk3w",
+      "bloomSize": 1048646,
+      "indexHash": "QmU2PbHowsCETBynKRPTZLnK7fwG7hDeS9v8EKbuY7tJc2",
+      "indexSize": 26013904
+    },
+    {
+      "range": "017843026-017846160",
+      "bloomHash": "QmWpGXVEXrLbBkwtnq25Db8keGLwQSVf7G2PZkNfzsTK5V",
+      "bloomSize": 917570,
+      "indexHash": "QmQm5PLBvFJZewDrPVMhgaBivrc4DjUjEq37KarudDcqrQ",
+      "indexSize": 25048660
+    },
+    {
+      "range": "017846161-017849298",
+      "bloomHash": "Qmbsp68dUbyKphFfKZTiRBArYTXfQo8sUsbHwhnAXqiiGT",
+      "bloomSize": 917570,
+      "indexHash": "QmQncFC23Buzwb6EPZA8uHBNyVVD31FCDfiD7pR9QLYeeZ",
+      "indexSize": 25569032
+    },
+    {
+      "range": "017849299-017852391",
+      "bloomHash": "QmYPBmXhm8PMR5JBKmhRPhCyEov8suqizcHdoZvEdrmkfN",
+      "bloomSize": 917570,
+      "indexHash": "QmNpUCFGpuGXAkUVwt42tsaUNFk1wPGp6kgUeb3XzxgBCd",
+      "indexSize": 24713288
+    },
+    {
+      "range": "017852392-017855839",
+      "bloomHash": "QmekBR6SuTYKY9cZoszQsXgVfZY2svixFxK9k1i9JNQboR",
+      "bloomSize": 1048646,
+      "indexHash": "QmdZtzNvrtqwwmv1TaAJB4NMnmGGjUi9jFUDpUkt8KRMo6",
+      "indexSize": 26529432
+    },
+    {
+      "range": "017855840-017859021",
+      "bloomHash": "Qmbm5ceVzCrU3bPzb3AUDukwf9gTXq4tRGvjHHpZ2EkctT",
+      "bloomSize": 917570,
+      "indexHash": "QmeikJLBatnhRQ5bnPbw1CSP3oWLZUQZ1LhfU1m6hC6UuD",
+      "indexSize": 24674120
+    },
+    {
+      "range": "017859022-017862211",
+      "bloomHash": "QmVuV1LRqKAGemNVdn3oKYRB7sum2wYXgv4CptAj48sLmZ",
+      "bloomSize": 1048646,
+      "indexHash": "QmZbWEQfNXTcDroyF8G1Z9eJHcBdCbpDqasTkSWJvED8U3",
+      "indexSize": 26535132
+    },
+    {
+      "range": "017862212-017865283",
+      "bloomHash": "QmfLreR2iqc4n8fg272HCM4C9JGt2Wu75HQoqNniy57Yyn",
+      "bloomSize": 917570,
+      "indexHash": "QmaG45jc5hiBuA99Ui1nkwm8N3CsTjabqKvdK9mnrUGoT6",
+      "indexSize": 24620472
+    },
+    {
+      "range": "017865284-017868480",
+      "bloomHash": "QmerYHCvXCCzDGgATQq27nFVHEsAfoRJsN2kVvQf59ZCKj",
+      "bloomSize": 917570,
+      "indexHash": "QmfNWWkKuS4kSBSLgHMh4qJYDZwHD7ceg8FL64EPRHFKgZ",
+      "indexSize": 25171416
+    },
+    {
+      "range": "017868481-017871534",
+      "bloomHash": "Qmbe28MA4FzFHX9eitnME4fj486TjV9YwWmStmYFnZMRwa",
+      "bloomSize": 917570,
+      "indexHash": "QmRTB1vn3n2kdp75ZAXPe8C1WFwaubdcX4Fds7WVdD2HKQ",
+      "indexSize": 25569172
+    },
+    {
+      "range": "017871535-017874520",
+      "bloomHash": "QmP91PeHrZCULUgBFTd9yGgWABK1Ns4UMk8Xn3PNF4ZzWF",
+      "bloomSize": 917570,
+      "indexHash": "QmYRjiSs9oBpDP7ixTYZhP1ptEpVw6YfSHabTamioupDwG",
+      "indexSize": 25068252
     }
   ]
 }
