--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -27056,6 +27056,104 @@
       "bloomSize": 917570,
       "indexHash": "QmWfvXQVw8EuXS4bxKNH8Av5NpcMiKyQ15bDeauJx1zDeL",
       "indexSize": 24938712
+    },
+    {
+      "range": "017922509-017925643",
+      "bloomHash": "QmYf29CX4KVJf43cTkH7cxxX1kg2Aj8J583P64XgNFVrkv",
+      "bloomSize": 786494,
+      "indexHash": "QmNbmUDtTPyghiJSVPW6HMV83FughvRvXxDVyNkfWT4xP9",
+      "indexSize": 24267756
+    },
+    {
+      "range": "017925644-017928717",
+      "bloomHash": "Qmeeu6oS6MEBokYssYVefMvyhGNgPv5fhCdvSghoQF6YXG",
+      "bloomSize": 917570,
+      "indexHash": "QmafwtScHNUJNpP9nq9xQ3xpF8YjoEQi8LozY5ZqXvr99q",
+      "indexSize": 25599028
+    },
+    {
+      "range": "017928718-017931733",
+      "bloomHash": "QmTrPx9XWz5QDyLkq4C41jqUJTTRKFasJrwaThFpeX9JGm",
+      "bloomSize": 786494,
+      "indexHash": "QmYkJjpTshfbCcaJMWsW1nwAY5k5WhKpUNpCB2EUUNRYaT",
+      "indexSize": 23476588
+    },
+    {
+      "range": "017931734-017934804",
+      "bloomHash": "QmZYT6j1izVx1XtsxoZiojMidK3ZZvXqbDdvBUBGQfodte",
+      "bloomSize": 1048646,
+      "indexHash": "QmbpGX8HQjJxL3zB5wAVsnxWxxVFBrPj2wZUgqTprxyiV3",
+      "indexSize": 26062340
+    },
+    {
+      "range": "017934805-017937672",
+      "bloomHash": "QmPmUXvjVcqLTGkUb9zAhbNRdaAHDGdwqngKQ8MohXHnJh",
+      "bloomSize": 917570,
+      "indexHash": "QmTY1pwUNwbszSKXtm8eRD7muxPUa9Ma4cZJy8rAfQpkke",
+      "indexSize": 24729552
+    },
+    {
+      "range": "017937673-017940634",
+      "bloomHash": "QmZijFq6sy7HgucBea6BbT8uNbLzwzPjxosQVjPiAUy3tu",
+      "bloomSize": 917570,
+      "indexHash": "QmQ3S9aypzmDNEEv1CkHvqfR5YqJb1JFWoiefzv7V3AmQX",
+      "indexSize": 25207736
+    },
+    {
+      "range": "017940635-017943606",
+      "bloomHash": "QmQk53ZnTMPmMews4G1eF14di19DruUPYVNCCS6TdqC6wN",
+      "bloomSize": 917570,
+      "indexHash": "QmXCBxmEyW624Sa7d3dkQQnhKd3gRzVHydJ12bvVjH5ecX",
+      "indexSize": 25773668
+    },
+    {
+      "range": "017943607-017946607",
+      "bloomHash": "QmaKQQizmiFwQjjCE3ZvpuZdJsWtUJM1573P31jvsNL9DB",
+      "bloomSize": 1048646,
+      "indexHash": "QmXMUZoTgfZLSL6TieyQBbRY48EAG9BFPuKbwTzp8ALftc",
+      "indexSize": 26204108
+    },
+    {
+      "range": "017946608-017949806",
+      "bloomHash": "QmZQ9gkzmfoFwAYbxagvapaR9hxkaMeoWaCsMwYC8ikBgt",
+      "bloomSize": 1048646,
+      "indexHash": "QmdKU29hQdyWzyqAqXz1d2DeM4cusvXPBq1U6SfbPVFjTL",
+      "indexSize": 26454420
+    },
+    {
+      "range": "017949807-017952978",
+      "bloomHash": "QmUTadzRHRZMZjyQKnqzwMpbEgTxGtnV7iKbeuy2XiH8zB",
+      "bloomSize": 917570,
+      "indexHash": "QmQ16fwyPpUgPq45kzH2zvuujGDcb5rdQJRMejk5KytiAJ",
+      "indexSize": 25479048
+    },
+    {
+      "range": "017952979-017956187",
+      "bloomHash": "QmVjEncbUbhy6MSxy7abbQTk7TTG9CRAbMtT3gaA3hY1We",
+      "bloomSize": 1310798,
+      "indexHash": "QmVKgKyWsbsWs58Eugcepsu6zuQrjLLeTesLNnDmUyjict",
+      "indexSize": 28605760
+    },
+    {
+      "range": "017956188-017959235",
+      "bloomHash": "QmXwhnPhhRQrJDfToEUeNgxcyfh9eqXYVoExYvJ9BW9pyu",
+      "bloomSize": 917570,
+      "indexHash": "QmS1REdfmS9TgzTRx3YhX63S5qmh2z2mGnNVzQJvfHZMAm",
+      "indexSize": 24956112
+    },
+    {
+      "range": "017959236-017962391",
+      "bloomHash": "QmSKgj8aFoSht9zvQkhhrAtFsXgyAGgE8dpGJrTVqFTjRi",
+      "bloomSize": 917570,
+      "indexHash": "QmZTVmxrT6xXBSzKZggccTZLQR92b3H62AZ196qEVjmKVg",
+      "indexSize": 25417508
+    },
+    {
+      "range": "017962392-017965407",
+      "bloomHash": "QmS82tn4Zy4FX5gB2pmgknxzvuHaHwJ5P9VmnnHsitf8G7",
+      "bloomSize": 917570,
+      "indexHash": "QmSWEiSc24vhq27aYgkWEpAvcEiGwE3gBWwBPWN9Mqyp6P",
+      "indexSize": 25142460
     }
   ]
 }
