--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,13 +41,6 @@ if(CURL_FOUND)
 endif(CURL_FOUND)
 
 # ----------------------------------------------------------------------------------------
-# Protoc is needed to compile protobuf files
-#
-message(STATUS "======== LOOKING FOR PROTOC ========================")
-find_package(Protobuf 3.21)
-message(STATUS ${Protobuf_PROTOC_EXECUTABLE})
-
-# ----------------------------------------------------------------------------------------
 # Globally available C++ settings
 set(DL_LIB "-ldl")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Werror -Wall -O2 -fPIC")
@@ -88,29 +81,12 @@ function(ADD_GO_INSTALLABLE_PROGRAM NAME MAIN_SRC DEST_DIR)
 endfunction(ADD_GO_INSTALLABLE_PROGRAM)
 
 # ----------------------------------------------------------------------------------------
-function(COMPILE_PROTOBUFFERS NAME MAIN_SRC)
-  message("Compiling protobuf files")
-  get_filename_component(MAIN_SRC_ABS ${MAIN_SRC} ABSOLUTE)
-  add_custom_target(${NAME})
-  add_custom_command(TARGET ${NAME}
-                    COMMAND protoc
-                    --go_out=.
-                    --go_opt=paths=source_relative
-                    --go-grpc_out=.
-                    --go-grpc_opt=paths=source_relative
-                    ${MAIN_SRC}
-                    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/proto
-                    DEPENDS ${MAIN_SRC_ABS} ${MAIN_SRC})
-  add_custom_target(${NAME}_all ALL DEPENDS ${NAME})
-endfunction(COMPILE_PROTOBUFFERS)
-
-# ----------------------------------------------------------------------------------------
 # Enable testing
 # enable_testing()
 add_custom_target(lint COMMAND "golangci-lint" "run" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/apps/chifra")
 add_custom_target(format COMMAND "${BIN_DIR}/makeClass" "--format" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(options COMMAND "${BIN_DIR}/makeClass" "--options --openapi" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
-add_custom_target(generate COMMAND "${BIN_DIR}/makeClass" "--all --readmes --openapi --options --gocmds --sdk" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
+add_custom_target(generate COMMAND "${BIN_DIR}/makeClass" "--all --readmes --openapi --options --gocmds --sdk --protobuf" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(sdk COMMAND "${BIN_DIR}/makeClass" "--sdk" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(gocmds COMMAND "${BIN_DIR}/makeClass" "--options --gocmds" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(readmes COMMAND "${BIN_DIR}/makeClass" "--readmes" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
