Incorporates scrape settings into the single trueBlocks.toml settings file

--- a/src/other/toml/makefile
+++ b/src/other/toml/makefile
@@ -1,6 +1,9 @@
 all:
 	@go build && ./toml-test
+
+diff:
+	@make all
 	@echo "Diffing output..."
-	@diff -u testdata/expected.toml testdata/output.toml
-	@diff -u testdata/expected.toml testdata/output1.toml
+	@diff testdata/expected.toml testdata/output.toml
+	@diff testdata/expected.toml testdata/output1.toml
 
