Adds chifra config show

--- a/src/dev_tools/CMakeLists.txt
+++ b/src/dev_tools/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required (VERSION 3.5)
 
 project (dev_tools)
 
-# add_subdirectory(utillib)
+add_subdirectory(utillib)
 add_subdirectory(makeClass)
 add_subdirectory(testRunner)
