Cleanup to the build including removal of proto-buf to makeClass

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,54 +16,29 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(trueBlocks)
 
 # ----------------------------------------------------------------------------------------
-# Debug msg
-# message(DEBUG  "Building src")
-
-# ----------------------------------------------------------------------------------------
 # Allow targets in cascade
 set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)
 
 # ----------------------------------------------------------------------------------------
 # Mandatory python3 interpret, the directive PythonInterp sets the following variables
 message(STATUS "======== LOOKING FOR PYTHON ========================")
-
 find_package(Python COMPONENTS Interpreter Development)
 
 # ----------------------------------------------------------------------------------------
 # We require the CURL library to be installed for most apps and tools
 # if found add its include path to includes section and link with it
-#
 message(STATUS "======== LOOKING FOR CURL ========================")
 find_package(CURL REQUIRED)
-
-if(CURL_FOUND)
-    include_directories(${CURL_INCLUDE_DIRS})
-endif(CURL_FOUND)
-
-# ----------------------------------------------------------------------------------------
-# Protoc is needed to compile protobuf files
-#
-message(STATUS "======== LOOKING FOR PROTOC ========================")
-find_package(Protobuf 3.21)
-message(STATUS ${Protobuf_PROTOC_EXECUTABLE})
+include_directories(${CURL_INCLUDE_DIRS})
 
 # ----------------------------------------------------------------------------------------
 # Globally available C++ settings
 set(DL_LIB "-ldl")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Werror -Wall -O2 -fPIC")
-
 if(APPLE)
     set(DL_LIB "")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Werror -Wconversion -Wall -O2 -fPIC")
 endif()
-
-# ----------------------------------------------------------------------------------------
-# Linkable libraries
-set(BASE_LIBS util ${CURL_LIBRARIES})
-
-# ----------------------------------------------------------------------------------------
-# Base included paths
-set(BASE_INCLUDE "${CMAKE_SOURCE_DIR}/dev_tools/utillib")
 
 # ----------------------------------------------------------------------------------------
 set(BIN_DIR ${CMAKE_SOURCE_DIR}/../bin)
@@ -88,29 +63,12 @@ function(ADD_GO_INSTALLABLE_PROGRAM NAME MAIN_SRC DEST_DIR)
 endfunction(ADD_GO_INSTALLABLE_PROGRAM)
 
 # ----------------------------------------------------------------------------------------
-function(COMPILE_PROTOBUFFERS NAME MAIN_SRC)
-  message("Compiling protobuf files")
-  get_filename_component(MAIN_SRC_ABS ${MAIN_SRC} ABSOLUTE)
-  add_custom_target(${NAME})
-  add_custom_command(TARGET ${NAME}
-                    COMMAND protoc
-                    --go_out=.
-                    --go_opt=paths=source_relative
-                    --go-grpc_out=.
-                    --go-grpc_opt=paths=source_relative
-                    ${MAIN_SRC}
-                    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/proto
-                    DEPENDS ${MAIN_SRC_ABS} ${MAIN_SRC})
-  add_custom_target(${NAME}_all ALL DEPENDS ${NAME})
-endfunction(COMPILE_PROTOBUFFERS)
-
-# ----------------------------------------------------------------------------------------
 # Enable testing
 # enable_testing()
 add_custom_target(lint COMMAND "golangci-lint" "run" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/apps/chifra")
 add_custom_target(format COMMAND "${BIN_DIR}/makeClass" "--format" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(options COMMAND "${BIN_DIR}/makeClass" "--options --openapi" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
-add_custom_target(generate COMMAND "${BIN_DIR}/makeClass" "--all --readmes --openapi --options --gocmds --sdk" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
+add_custom_target(generate COMMAND "${BIN_DIR}/makeClass" "--all --readmes --openapi --options --gocmds --sdk --protobuf" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(sdk COMMAND "${BIN_DIR}/makeClass" "--sdk" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(gocmds COMMAND "${BIN_DIR}/makeClass" "--options --gocmds" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 add_custom_target(readmes COMMAND "${BIN_DIR}/makeClass" "--readmes" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
