Makes receipts group cachable and auto-generates withdrawal types (but doesn't implement them).

--- a/src/other/install/trueBlocks.toml
+++ b/src/other/install/trueBlocks.toml
@@ -4,41 +4,35 @@
 [settings]
     cachePath = ""
     defaultChain = "mainnet"
-    defaultGateway = "https://ipfs.unchainedindex.io/ipfs/"
+    defaultGateway = "https://ipfs.unchainedindex.io/ipfs"
     indexPath = ""
 
 [keys]
     [keys.etherscan]
         apiKey = ""
+    [keys.infura]
+        apiKey = ""
+        secret = ""
     [keys.pinata]
         apiKey = ""
         jwt = ""
         secret = ""
+    [keys.trueblocks]
+        license = ""
+        apiKey = ""
 
 [chains]
-    [chains.mainnet]
-        chainId = "1"
-        localExplorer = "http://localhost:1234"
-        remoteExplorer = "https://etherscan.io"
-        rpcProvider = "http://localhost:8545"
-        symbol = "ETH"
     [chains.gnosis]
         chainId = "100"
         localExplorer = "http://localhost:1234"
         remoteExplorer = "https://gnosisscan.io/"
         rpcProvider = "https://gnosischain-rpc.gateway.pokt.network"
         symbol = "XDAI"
-    [chains.sepolia]
-        chainId = "11155111"
+    [chains.mainnet]
+        chainId = "1"
         localExplorer = "http://localhost:1234"
-        remoteExplorer = "https://sepolia.otterscan.io/"
-        rpcProvider = "http://localhost:8548"
-        symbol = "ETH"
-    [chains.goerli]
-        chainId = "5"
-        localExplorer = "http://localhost:1234"
-        remoteExplorer = "https://goerli.etherscan.io"
-        rpcProvider = "https://goerli-light.eth.linkpool.io"
+        remoteExplorer = "https://etherscan.io"
+        rpcProvider = "http://localhost:8545"
         symbol = "ETH"
     [chains.optimism]
         chainId = "10"
@@ -52,3 +46,9 @@
         remoteExplorer = "https://mumbai.polygonscan.com"
         rpcProvider = "https://rpc-mumbai.maticvigil.com"
         symbol = "MATIC"
+    [chains.sepolia]
+        chainId = "11155111"
+        localExplorer = "http://localhost:1234"
+        remoteExplorer = "https://sepolia.otterscan.io/"
+        rpcProvider = "http://localhost:8548"
+        symbol = "ETH"
