--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,9 +44,9 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
       -
         name: Install prerequistes
+        # sudo apt-get update
+        # sudo apt-get upgrade
         run: |
-          sudo apt-get update
-          sudo apt-get upgrade
           sudo apt-get install build-essential git cmake
           sudo apt-get install python3 tree jq
           sudo apt-get install libcurl3-dev clang-format
