--- a/src/other/install/per-chain/gnosis/manifest.json
+++ b/src/other/install/per-chain/gnosis/manifest.json
@@ -1,7 +1,7 @@
 {
   "version": "trueblocks-core@v0.40.0",
   "chain": "gnosis",
-  "schemas": "QmUou7zX2g2tY58LP1A2GyP5RF9nbJsoxKTp299ah3svgb",
+  "specification": "QmUou7zX2g2tY58LP1A2GyP5RF9nbJsoxKTp299ah3svgb",
   "config": {
     "appsPerChunk": 750000,
     "snapToGrid": 100000,
