Trying to fix tests

--- a/src/other/install/trueBlocks.toml
+++ b/src/other/install/trueBlocks.toml
@@ -1,5 +1,5 @@
 [version]
-    current = "v1.5.0-release"
+    current = "v1.6.0-release"
 
 [settings]
     cachePath = ""
@@ -27,6 +27,8 @@
 
 [unchained]
     manifest = "trueblocks-core@v0.40.0"
+    preferredPublisher = "0xf503017d7baf7fbc0fff7492b751025c6a78179b"
+    unchainedIndex = "0x0c316b7042b419d07d343f2f4f5bd54ff731183d"
 
 [chains]
     [chains.gnosis]
