--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
+          # Go Version
           go-version: 1.22
       - uses: actions/checkout@v3
       - name: golangci-lint
