First example using the new SDK

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(simple)
 add_subdirectory(findFirst)
 # add_subdirectory(txCounter)
 add_subdirectory(allContracts)
+add_subdirectory(usesSDK)
