--- a/src/dev_tools/sdkTester/makefile
+++ b/src/dev_tools/sdkTester/makefile
@@ -1,8 +1,28 @@
 all: *.go
-	@echo "building the sdk"
+	@echo "Building the SDK..."
 	@go build main.go sdk.go
 	@mv main ../../../bin/sdkTester
 
 test: *.go
-	@echo "building and testing sdk"
+	@echo "Building and testing SDK..."
 	@TEST_MODE=true go run main.go sdk.go
+
+archive:
+	@echo "Archiving tests..."
+	@if [ -d test ]; then \
+		rm -f testing.tar.gz; \
+		tar -czf testing.tar.gz test; \
+		echo "Tests archived into testing.tar.gz."; \
+	else \
+		echo "Test directory does not exist, nothing to archive."; \
+	fi
+
+extract:
+	@echo "Extracting tests..."
+	@if [ -f testing.tar.gz ]; then \
+		rm -fR test; \
+		tar -xzf testing.tar.gz; \
+		echo "Tests extracted."; \
+	else \
+		echo "Archive file testing.tar.gz does not exist, cannot extract."; \
+	fi
