Adds an example for optimism

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(findFirst)
 # add_subdirectory(txCounter)
 add_subdirectory(allContracts)
 add_subdirectory(usesSDK)
+# add_subdirectory(optimism1)
