--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(findFirst)
 # add_subdirectory(txCounter)
 add_subdirectory(allContracts)
 add_subdirectory(usesSDK)
+# add_subdirectory(balanceChart)
 # add_subdirectory(optimism1)
